# FinHub

./: .gitignore  README.md  auth.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  reset_db.py  schemas.py  services.py  test_main.py
static/: cjtrade_extension.js  login.js  register.js  script.js  script_responsive.js  style.css  style_responsive.css
templates/: index.html  index2.html  index_responsive.html  login.html  register.html
